Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26315

Qt6-build: Text overlay on wizard icons missing (in HighDpi scenario)

XMLWordPrintable

    • Windows
    • 44fb173a6e147c35028e46bc4a65d16f791c254d (qt-creator/tqtc-qt-creator/master)

      The file type icons in the file wizard are supposed to have a text overlay. This is how it should look like (screen shot from a Qt5 build of Qt Creator on HighDpi on Windows):

      A Qt6-based build on High Dpi system on Windows is missing these overlays.

      That same Qt6 build shows the text overlays under nonn-HighDpi.

        1. Qt5_build_textoverlay_present.png
          110 kB
          Alessandro Portale
        2. Qt6_build_textoverlay_missing.png
          101 kB
          Alessandro Portale
        For Gerrit Dashboard: QTCREATORBUG-26315
        # Subject Branch Project Status CR V

            portale Alessandro Portale
            portale Alessandro Portale
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes